# my-cookbook

./: .gitignore  README.md
comp-sci/: avl-tree.md  comp-sci.md  rbtree.md  ringbuf
comp-sci/backtracking-algorithm/: README.md  find-all-path.py  n-queen.py
comp-sci/bst/c-no-delete/: bst.c  bst.h  main.c
comp-sci/bst/c-with-delete/: CMakeLists.txt  bst.c  bst.h  main.c  test_bst.cpp
comp-sci/bst/cpp-no-delete/: CMakeLists.txt  bst.cpp  bst.hpp  bst_test.cpp  main.cpp
comp-sci/bst/cpp-with-delete/: CMakeLists.txt  bst.cpp  bst.hpp  bst_test.cpp  main.cpp
comp-sci/bst/python/: bst.py  main.py  pyproject.toml  test_bst.py
comp-sci/bubble-sort/: bubble-sort.py
comp-sci/diffie-hellman/py/: README.md  simulator.py
comp-sci/graph/maze/old-c/: README.md  maze.c
comp-sci/graph/maze/python/: simple-6x6-maze.json.wrong  visualize.py
comp-sci/graph/visualize/: .gitignore  README.md  main-2.py  main.py  sample-data-1.json  sample-data-2.json
comp-sci/hash/: hash.md
comp-sci/hash/cpp-gemini/: CMakeLists.txt  hashtable.cpp  hashtable.hpp  hashtable_test.cpp
comp-sci/hash/python/: hashtable-test.py  hashtable.py  hashtable.py.gemini  pseudo_xxhash.py.gemini
comp-sci/heap/c/: CMakeLists.txt  main.c  maxheap.c  maxheap.h  maxheap_test.cpp
comp-sci/heap/cpp/: CMakeLists.txt  maxheap.cpp  maxheap.hpp  maxheap_test.cpp
comp-sci/heap/python/: main.py  maxheap.py  maxheap_test.py  pyproject.toml
comp-sci/linkedlist/c/: llist.c  llist.h  llist_test.c
comp-sci/linkedlist/cpp/: CMakeLists.txt  llist.cpp.gemini  llist.hpp  llist_gtest.cpp  llist_test.cpp
comp-sci/linkedlist/python/: linkedlist.py  linkedlist_test.py  pyproject.toml
comp-sci/maze-dfs/: README.md
comp-sci/maze-dfs/c/: maze.c
comp-sci/maze-dfs/py/: main-ui.py  main.py  maze.py
comp-sci/minmax-decision/: README.md
examples/: examples.md
examples/battleship/gemini/: battleship.py
examples/bull-cow/: bull-cow.md
examples/bull-cow/c/: main.c  todo.md
examples/bull-cow/cpp/: bullgame.cpp  bullgame.hpp  main.cpp
examples/bull-cow/java/: BullCowGame.java  Main.java
examples/bull-cow/python/: bull-cow.py
examples/hangman/: hangman.md
examples/hangman/c/: CMakeLists.txt  Makefile  hangman.c  hangman.c.template  hangman.h  hangman_test.cpp  main.c
examples/hangman/cpp-1/: Makefile  cpp-1.md  main.cpp
examples/hangman/cpp-2/: CMakeLists.txt  game_state.cpp  game_state.hpp  main.cpp
examples/hangman/cpp-2/test/: game_state_test.cpp
examples/hangman/gemini/: hangman-animation.py  hangman-category.py  improvement.md
examples/hangman/gemini/more-words/: more-300.py  more-words.py
examples/hangman/prototype/: hangman.c  hangman.py
examples/hangman/prototype/hangman-c/: hangman-with-test.md  hangman.c  hangman.h  hangman_test.cpp
examples/hangman/prototype/more-words/: balanced-words.py
examples/hangman/python/: TODO.md  hangman.py  hangman.py.template  test_hangman.py
examples/hello/: hello.md
examples/https-handshake/: https-handshake.md
examples/https-handshake/prototype/: get-google-301.py  get-google.py
examples/matrix-screensaver/python/: matrix-final.py  pyproject.toml
examples/sudoku-gen-sol/python/: pyproject.toml  sudoku.py  sudoku_pygame.py
examples/tic-tac-toe/java/: Main-Skeleton.java  Main.java
examples/tic-tac-toe/java-1p/: Main.java
examples/tic-tac-toe/py-1p/: test_tictactoe.py  test_tictactoe_pytest.py  tictactoe.py
examples/word-jumble/gemini/: word-jumble-more-with-definition.py  word-jumble.py
examples/word-jumble/prototype/: improvement.md  word-jumble-with-definition.py
fragments/: fragments.md
fragments/agent-dev/: README.md  install.sh  snow-calc.toml  weather.toml
fragments/mmap-wayland/: README.md  alice.txt  mmap-file.c
fragments/oop-polymorph/: rust.md
fragments/oop-polymorph/cpp/: poly.cpp  virt-dest-reminder.md
fragments/oop-polymorph/golang/: poly.go
fragments/sdl/sdl2-compat-test/: main.c  readme.txt
fragments/share-ccpp/: factorial_util.c  factorial_util.h  main.c  main.cpp  share-ccpp.md
fragments/singleton/cpp/: README.md  static-singleton.cpp
