cmake_minimum_required(VERSION 3.14)
project(BST_Tests)

# Set C++ standard for Google Test
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Set C standard for BST library
set(CMAKE_C_STANDARD 11)

# Include FetchContent module to download Google Test
include(FetchContent)

# Fetch Google Test
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG v1.14.0
)

# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)

FetchContent_MakeAvailable(googletest)

# Enable testing
enable_testing()

# Create BST library
add_library(bst STATIC
  bst.c
  bst.h
)

# Create test executable
add_executable(test_bst
  test_bst.cpp
)

# Link test executable with BST library and Google Test
target_link_libraries(test_bst
  bst
  GTest::gtest_main
)

# Discover tests
include(GoogleTest)
gtest_discover_tests(test_bst)
